프로그래머스 2레벨

--- a/프로그래머스/구명보트.md
+++ b/프로그래머스/구명보트.md
@@ -1,6 +1,6 @@
 **문제 설명**
 
-무인도에 갇힌 사람들을 구명보트를 이용하여 구출하려고 합니다. 구명보트는 작아서 한 번에 최대 **2명**씩 밖에 탈 수 없고, 무게 제한도 있습니다.
+무인도에 갇힌 사람들을 구명보트를 이용하여 구출하려고 합니다. 구명보트는 작아서 한 번에 최대 **2명**씩 밖에 탈 수 없고, 무게 제한도 있습니다.
 
 예를 들어, 사람들의 몸무게가 \[70kg, 50kg, 80kg, 50kg\]이고 구명보트의 무게 제한이 100kg이라면 2번째 사람과 4번째 사람은 같이 탈 수 있지만 1번째 사람과 3번째 사람의 무게의 합은 150kg이므로 구명보트의 무게 제한을 초과하여 같이 탈 수 없습니다.
 
@@ -55,4 +55,4 @@ function solution(people, limit) {
 
 lt와 rt가 각각 무거운사람,가벼운사람을 가리키고 lt를 태운뒤 다음 lt가 탈수있는지 확인한다. 안되면 rt(가벼운사람)를 태운다. rt도 못타면 그냥 다음 보트로 넘어가는 방식
 
-이제 남은 프로그래머스 2단계 문제들은 슬쩍 읽어보고 어려워 보여서 패스했던것들이다.. 과연 지금 실력으로 잘 풀수있을까.. 흠
+이제 남은 프로그래머스 2레벨 문제들은 슬쩍 읽어보고 어려워 보여서 패스했던것들이다.. 과연 지금 실력으로 잘 풀수있을까.. 흠
