이것이 코딩테스트다 구현2

--- a/이것이 코딩테스트다/구현.md
+++ b/이것이 코딩테스트다/구현.md
@@ -42,3 +42,24 @@ console.log(solution(5, ['R', 'R', 'R', 'U', 'D', 'D']));
 ```
 
 난이도가 낮은 간단한 문제였다 약간 반복되는코드를 좀더 줄인다면 더 좋을듯.
+
+# 시각
+
+```javascript
+function solution(n) {
+  let answer = 0;
+  for (let i = 0; i <= n; i++) {
+    for (let j = 0; j < 60; j++) {
+      for (let k = 0; k < 60; k++) {
+        if ((String(i) + String(j) + String(k)).search('3') !== -1) answer++;
+        // console.log(String(i) + String(j) + String(k));
+      }
+    }
+  }
+  return answer;
+}
+
+console.log(solution(5));
+```
+
+n이 입력되면 00:00:00 부터 n:59:59 까지의 시간중에, 3이 하나라도 들어가면 answer를 +1 해서 answer를 리턴해야되는문제, 뭔가 규칙이 있지않을까 싶었는데 규칙은 못찾았고 그냥 완전탐색을했다. 문자열에서 문자열을 찾는 `search()` 를 처음알게되어서 사용해봤다.
