이것이 코딩테스트다 구현3

--- a/이것이 코딩테스트다/구현.md
+++ b/이것이 코딩테스트다/구현.md
@@ -63,3 +63,44 @@ console.log(solution(5));
 ```
 
 n이 입력되면 00:00:00 부터 n:59:59 까지의 시간중에, 3이 하나라도 들어가면 answer를 +1 해서 answer를 리턴해야되는문제, 뭔가 규칙이 있지않을까 싶었는데 규칙은 못찾았고 그냥 완전탐색을했다. 문자열에서 문자열을 찾는 `search()` 를 처음알게되어서 사용해봤다.
+
+# 왕실의 나이트
+
+```javascript
+function solution(location) {
+  let answer = 0;
+  let [x, y] = location.split('');
+  x = x.charCodeAt(0) - 'a'.charCodeAt(0) + 1;
+  y = Number(y);
+  const moves = [
+    [-2, -1],
+    [-2, 1],
+    [2, 1],
+    [2, -1],
+    [-1, -2],
+    [1, -2],
+    [1, 2],
+    [-1, 2],
+  ];
+
+  for (const [dx, dy] of moves) {
+    if (x + dx >= 1 && y + dy >= 1 && x + dx <= 8 && y + dy <= 8) {
+      answer++;
+    }
+  }
+  return answer;
+}
+
+console.log(solution('a1'));
+
+// 상1 - (-1,0) (-1,0) (0,-1) =  (-2,-1)
+// 상2 - (-1,0) (-1,0) (0,1)  = (-2,1)
+// 하1 - (1,0) (1,0) (0,1) = (2,1)
+// 하2 - (1,0) (1,0) (0,-1) = (2,-1)
+// 좌1 - (0,-1) (0,-1) (1,0) = (1,-2)
+// 좌2 - (0,-1) (0,-1) (-1,0) = (-1,-2)
+// 우1 - (0,1) (0,1) (1,0) = (1,2)
+// 우2 - (0,1) (0,1) (-1,0) = (-1,2)
+```
+
+간단한 문제였다, 처음에 좌표를 a1 이런식으로 줘서 a를 어떻게 1로 바꾸는게 좋을까 생각을 많이했던거같음.
