이것이 코딩테스트다 구현4

--- a/이것이 코딩테스트다/구현.md
+++ b/이것이 코딩테스트다/구현.md
@@ -104,3 +104,75 @@ console.log(solution('a1'));
 ```
 
 간단한 문제였다, 처음에 좌표를 a1 이런식으로 줘서 a를 어떻게 1로 바꾸는게 좋을까 생각을 많이했던거같음.
+
+# 게임 개발
+
+```javascript
+function solution(x, y, d, m) {
+  // 방문한곳 기록용 배열
+  let check = Array.from(Array(m.length), () => Array(m[0].length).fill(0));
+
+  // 좌 하 우 상 순서
+  let dx = [-1, 0, 1, 0];
+  let dy = [0, 1, 0, -1];
+
+  let answer = 1;
+  let turnCount = 0;
+  check[x][y] = 1;
+
+  //현재보고있는 방향의 왼쪽으로 회전함
+  function turnLeft() {
+    d = d == 0 ? 3 : d - 1;
+  }
+
+  while (1) {
+    turnLeft(); //일단 회전하고
+    let nx = x + dx[d]; //회전한 방향으로 갈수있는지 계산하기위한 좌표
+    let ny = y + dy[d]; //회전한 방향으로 갈수있는지 계산하기위한 좌표
+    //가려는 방향이 육지면서 가보지도 않았다
+    if (m[nx][ny] == 0 && check[nx][ny] == 0) {
+      x = nx; //이동
+      y = ny; //이동
+      check[x][y] = 1; //방문했다고 기록
+      answer++; //카운트
+      turnCount = 0; //회전횟수 초기화
+      continue;
+    }
+    //가려는 방향이 바다거나 이미 가봤다
+    else {
+      turnCount++; //회전횟수 증가
+
+      // 회전횟수는 0,1,2,3 이렇게 4번 체크하는데
+      // 회전횟수가 4가됐으면 이제 다체크했고 갈곳이없는거임, 뒤로한칸이동,
+      if (turnCount == 4) {
+        let nx = x - dx[d];
+        let ny = y - dy[d];
+        //근데 뒤가 바다면 끝
+        if (m[nx][ny] == 1) {
+          break;
+        }
+        // 뒤가 바다가아니면 이동, 이미가봤기때문에 체크는 하지않음
+        else {
+          x = nx;
+          y = ny;
+          turnCount = 0;
+        }
+      }
+    }
+  }
+  return answer;
+}
+
+console.log(
+  solution(1, 1, 0, [
+    [1, 1, 1, 1],
+    [1, 0, 0, 1],
+    [1, 1, 0, 1],
+    [1, 1, 1, 1],
+  ])
+);
+```
+
+꽤 오래걸린문제.. 문제를 잘못이해해서 1시간반넘게걸렸다. 쉬워보였지만 생각할것도많았음.
+
+처음에는 DFS처럼 이미 이동한곳은 바다로 바꿔서 다시 안가게끔했는데 문제를 제대로 보니 방문했던곳이어도 다시 가야되는 경우가있었다..
