--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -12,17 +12,6 @@
 
 선택정렬은 O(N^2)이라 데이터가 많을수록 엄청느려짐
 
-```javascript
-function solution2(arr) {
-  for (let i = 0; i < arr.length; i++) {
-    let idx = i;
-    for (let j = i + 1; j < arr.length; j++) {
-      if (arr[j] < arr[idx]) {
-        idx = j;
-      }
-    }
-    [arr[i], arr[idx]] = [arr[idx], arr[i]];
-  }
-  return arr;
-}
-```
+# 삽입 정렬
+
+적절한위치에 데이터를 `삽입`하는 방식이라 삽입정렬이라고 부른다. 데이터가 이미 거의 정렬되어있다면 매우빠르게 동작하는 특징이있다, 기본적으로 O(N^2)인데, 최선의 경우(정렬된경우) O(N) 시간복잡도를 가진다.
