--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -10,8 +10,12 @@
 | N=1000           | 0.356    | 0.00343초 | 0.0000365초                 |
 | N=10000          | 15.475초 | 0.0312초  | 0.000248초                  |
 
-선택정렬은 O(N^2)이라 데이터가 많을수록 엄청느려짐
+선택정렬은 _O(N^2)_ 이라 데이터가 많을수록 엄청느려짐
 
 # 삽입 정렬
 
-적절한위치에 데이터를 `삽입`하는 방식이라 삽입정렬이라고 부른다. 데이터가 이미 거의 정렬되어있다면 매우빠르게 동작하는 특징이있다, 기본적으로 O(N^2)인데, 최선의 경우(정렬된경우) O(N) 시간복잡도를 가진다.
+적절한위치에 데이터를 `삽입`하는 방식이라 삽입정렬이라고 부른다. 데이터가 이미 거의 정렬되어있다면 매우빠르게 동작하는 특징이있다, 기본적으로 _O(N^2)_ 인데, 최선의 경우(정렬된경우) _O(N)_ 시간복잡도를 가진다.
+
+# 퀵 정렬
+
+이름부터 빠른 퀵정렬의 시간복잡도는 _O(NlogN)_ 이다. 하지만 최악의 경우 _O(N^2)_ 이다. 데이터가 무작위로 입력되는경우 퀵정렬은 빠르게 동작할 확률이 높지만, 이미 정렬된 데이터를 입력하는경우는 매우 느리게 동작한다. 삽입정렬은 정렬된 데이터일때 빠르게 동작하는데 퀵정렬은 반대이다.
