--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -19,3 +19,31 @@
 # 퀵 정렬
 
 이름부터 빠른 퀵정렬의 시간복잡도는 _O(NlogN)_ 이다. 하지만 최악의 경우 _O(N^2)_ 이다. 데이터가 무작위로 입력되는경우 퀵정렬은 빠르게 동작할 확률이 높지만, 이미 정렬된 데이터를 입력하는경우는 매우 느리게 동작한다. 삽입정렬은 정렬된 데이터일때 빠르게 동작하는데 퀵정렬은 반대이다.
+
+# 계수 정렬
+
+특정한 조건이 부합할때만 사용할수있지만, 매우빠른 정렬 알고리즘이다.
+
+모든 데이터가 양의정수일때 데이터의 개수가 N개, 최댓값이 K일때 최악의경우에도 _O(N+K)_ 를 보장한다.
+
+계수정렬은 이번에 처음알았는데, 굉장히 신기한 방식이다. 만약 가장 작은데이터가 0이고 가장큰 데이터가 10이면, 11칸 배열을 선언한다. 그다음 모든 데이터를 순회하면서 데이터에 해당하는 인덱스를 +1 해준다 예를들어 8이면 8번째 인덱스를 +1해주는방식.. 모든 데이터 순회가 끝난뒤에는 이 배열을 순회하면서 인덱스에 할당된 숫자만큼 인덱스를 출력하면된다.
+
+만약 0,2,5,8,1,2,4,6 이렇게 데이터가 있을때 가장 작은 데이터가 0이고 가장 큰 데이터가 8이니까 9칸짜리 배열을 선언한다.
+
+| 0   | 1   | 2   | 3   | 4   | 5   | 6   | 7   | 8   |
+| --- | --- | --- | --- | --- | --- | --- | --- | --- |
+| 0   | 0   | 0   | 0   | 0   | 0   | 0   | 0   | 0   |
+
+데이터를 순회하면서 각 데이터에 해당하는 인덱스를 +1 해준다.
+
+| 0   | 1   | 2   | 3   | 4   | 5   | 6   | 7   | 8   |
+| --- | --- | --- | --- | --- | --- | --- | --- | --- |
+| 1   | 1   | 2   | 0   | 1   | 1   | 1   | 0   | 1   |
+
+배열에 이렇게 값이 들어갈것이고
+
+이 배열을 순회하면서 인덱스에 해당하는 값만큼 출력하면된다
+
+0은 1개 1은 1개 2는 2개 3은없고 4는 1개 5는 1개 6은 1개 7은 없고 8은 1개
+
+0 1 2 2 4 5 6 8
