이것이 코딩테스트다 정렬 문제1

--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -47,3 +47,17 @@
 0은 1개 1은 1개 2는 2개 3은없고 4는 1개 5는 1개 6은 1개 7은 없고 8은 1개
 
 0 1 2 2 4 5 6 8
+
+계수정렬은 데이터의 크기가 한정되어있고 많이 중복될수록 유리하다
+
+# 위에서 아래로
+
+```javascript
+function solution(arr) {
+  return arr.sort((a, b) => a - b).reverse();
+}
+
+console.log(solution([1, 3, 1, 4, 7, 10]));
+```
+
+단순한 내림차순 정렬문제다
