--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -61,3 +61,23 @@ console.log(solution([1, 3, 1, 4, 7, 10]));
 ```
 
 단순한 내림차순 정렬문제다
+
+# 성적이 낮은 순서로 학생 출력하기
+
+```javascript
+function solution(arr) {
+  return arr.sort((a, b) => a[1] - b[1]).map((v) => v[0]);
+}
+console.log(
+  solution([
+    ['홍길동', 95],
+    ['이순신', 77],
+    ['홍순동', 10],
+    ['순신이', 57],
+    ['홍신동', 15],
+    ['엄순길', 67],
+  ])
+);
+```
+
+sort함수로 성적낮은순으로 정렬한뒤 map으로 이름만뽑아서 배열로 반환했다. 이번문제는 학생수가 1~10만까지였기때문에, _O(N)_ 이나 _O(NlogN)_ 을 보장하는 정렬알고리즘을 사용했어야한다. 10만개 랜덤데이터를 넣어봤는데 100ms도 안나와서 신기했음.
