--- a/이것이 코딩테스트다/정렬.md
+++ b/이것이 코딩테스트다/정렬.md
@@ -81,3 +81,35 @@ console.log(
 ```
 
 sort함수로 성적낮은순으로 정렬한뒤 map으로 이름만뽑아서 배열로 반환했다. 이번문제는 학생수가 1~10만까지였기때문에, _O(N)_ 이나 _O(NlogN)_ 을 보장하는 정렬알고리즘을 사용했어야한다. 10만개 랜덤데이터를 넣어봤는데 100ms도 안나와서 신기했음.
+
+# 두 배열의 원소 교체
+
+```javascript
+function solution(k, arr1, arr2) {
+  let sum = 0;
+
+  arr1.sort((a, b) => a - b);
+  arr2.sort((a, b) => a - b).reverse();
+
+  for (let i = 0; i < arr1.length; i++) {
+    if (i < k) sum += arr2[i];
+    else sum += arr1[i];
+  }
+
+  return sum;
+}
+console.log(solution(3, [1, 2, 5, 4, 3], [5, 5, 6, 6, 5]));
+```
+
+N은 1~10만, K는 0~N 범위를 가진다
+A배열과 B배열에있는 element를 K번 바꿔서 A배열 요소의 총 합이 가장 큰값을 구해야된다.
+
+만약 K가 3일경우.
+
+A배열을 오름차순으로 정렬하고 [ 1, 2, 3, 4, 5 ]
+
+B배열을 내림차순으로 정렬한다음 [ 6, 6, 5, 5, 5 ]
+
+B배열에서 0,1,2 인덱스를 sum에 더하고 3,4 인덱스를 A배열에서 더하게 했다
+
+6,6,5 는 B배열 그리고 4,5 는 A배열에서 뽑아서 더하니까 답은 26
